Fix image sizing and text wrapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,7 @@ body > footer {
 
 .h3-dev {
     color: white;
+    word-break: break-all;
 }
 
 .h3-dev:hover {
@@ -84,11 +85,24 @@ body > footer {
     background-color: #445261;
     color: white;
     position: relative;
+    max-height: 300px;
 }
 
 .masthead-image {
     position: relative;
     overflow: hidden;
+}
+
+.masthead-image img {
+    min-height: 300px;
+    max-height: 300px;
+    object-fit: contain;
+}
+
+.card-img-top {
+    object-fit: contain;
+    max-height: 200px;
+    min-height: 200px;
 }
 
 .masthead-image:after {
@@ -116,7 +130,7 @@ body > footer {
 }
 
 .post-title {
-    margin-top: 20%;
+    margin-top: 10%;
     margin-left: 5%;
 }
 
